// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`messages.length === 0 1`] = `
<div
  className="card_link_row layout-row flex-100 layout-align-center"
>
  <div
    className="flex-none content_width layout-row layout-align-start-center layout-wrap"
  >
    <div
      className="flex-100 layout-row layout-align-space-around-center layout-wrap"
    >
      <div
        className="flex-100 layout-row layout-align-start-center"
      >
        <TextHeading
          color=""
          size={4}
          text="Are you importing or exporting?"
          theme={
            Object {
              "colors": Object {
                "primary": "#333",
                "secondary": "#fafafa",
              },
            }
          }
        />
      </div>
      <div
        className="direction_card unselected flex-none layout-row layout-align-center-center"
        onClick={[Function]}
      >
        <div
          className="flex-80 layout-row layout-align-space-between-center"
        >
          <p
            className="flex-none"
          >
             
            I am {{commercialAction}} ({{direction}})
          </p>
        </div>
      </div>
      <div
        className="direction_card unselected flex-none layout-row layout-align-center-center"
        onClick={[Function]}
      >
        <div
          className="flex-80 layout-row layout-align-space-between-center"
        >
          <p
            className="flex-none"
          >
             
            I am {{commercialAction}} ({{direction}})
          </p>
        </div>
      </div>
    </div>
    <div
      className="flex-100 layout-row layout-wrap section inactive"
    >
      <div
        className="flex-100 layout-row layout-align-start-center"
      >
        <TextHeading
          color=""
          size={4}
          text="Are you shipping cargo items or containers?"
          theme={
            Object {
              "colors": Object {
                "primary": "#333",
                "secondary": "#fafafa",
              },
            }
          }
        />
      </div>
      <CardLinkRow
        allowedCargoTypes={
          Object {
            "cargo_item": false,
            "container": false,
          }
        }
        cards={
          Array [
            Object {
              "code": "cargo_item",
              "handleClick": [Function],
              "img": "https://assets.itsmycargo.com/assets/icons/cargo_item.svg",
              "name": Object {
                "modes_of_transport": Array [],
              },
              "options": Object {
                "contained": true,
              },
            },
            Object {
              "code": "container",
              "handleClick": [Function],
              "img": "https://assets.itsmycargo.com/assets/icons/container.svg",
              "name": Object {
                "modes_of_transport": Array [],
              },
              "options": Object {
                "contained": true,
              },
            },
          ]
        }
        selectedType=""
        theme={
          Object {
            "colors": Object {
              "primary": "#333",
              "secondary": "#fafafa",
            },
          }
        }
      />
    </div>
    <div
      className="next_step_sec flex-100 layout-row layout-align-center section inactive"
    >
      <div
        className="mot_sec flex-80 layout-row layout-wrap layout-align-center"
        style={
          Object {
            "color": "#333",
          }
        }
      >
        <div
          className="next_step_btn_sec flex-100 layout-row layout-align-end"
        >
          <div
            className="flex-none layout-column layout-align-center-center"
          >
            <div
              className="flex-none layout-row layout-align-center-start"
            >
              <p
                className="mot_note"
              >
                Availabilities will be shown for all applicable modes of transport for your shipment
              </p>
              <RoundButton
                active={false}
                back={false}
                classNames=""
                disabled={false}
                handleDisabled={null}
                handleNext={null}
                icon=""
                iconClass="fa-chevron-right"
                inverse={false}
                size="small"
                text="Next Step"
                theme={
                  Object {
                    "colors": Object {
                      "primary": "#333",
                      "secondary": "#fafafa",
                    },
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`shallow render 1`] = `
<div
  className="card_link_row layout-row flex-100 layout-align-center"
>
  <div
    className="flex-none content_width layout-row layout-align-start-center layout-wrap"
  >
    <div
      className="flex-100 layout-row layout-align-space-around-center layout-wrap"
    >
      <div
        className="flex-100 layout-row layout-align-start-center"
      >
        <TextHeading
          color=""
          size={4}
          text="Are you importing or exporting?"
          theme={
            Object {
              "colors": Object {
                "primary": "#333",
                "secondary": "#fafafa",
              },
            }
          }
        />
      </div>
      <div
        className="direction_card unselected flex-none layout-row layout-align-center-center"
        onClick={[Function]}
      >
        <div
          className="flex-80 layout-row layout-align-space-between-center"
        >
          <p
            className="flex-none"
          >
             
            I am {{commercialAction}} ({{direction}})
          </p>
        </div>
      </div>
      <div
        className="direction_card unselected flex-none layout-row layout-align-center-center"
        onClick={[Function]}
      >
        <div
          className="flex-80 layout-row layout-align-space-between-center"
        >
          <p
            className="flex-none"
          >
             
            I am {{commercialAction}} ({{direction}})
          </p>
        </div>
      </div>
    </div>
    <div
      className="flex-100 layout-row layout-wrap section inactive"
    >
      <div
        className="flex-100 layout-row layout-align-start-center"
      >
        <TextHeading
          color=""
          size={4}
          text="Are you shipping cargo items or containers?"
          theme={
            Object {
              "colors": Object {
                "primary": "#333",
                "secondary": "#fafafa",
              },
            }
          }
        />
      </div>
      <CardLinkRow
        allowedCargoTypes={
          Object {
            "cargo_item": false,
            "container": false,
          }
        }
        cards={
          Array [
            Object {
              "code": "cargo_item",
              "handleClick": [Function],
              "img": "https://assets.itsmycargo.com/assets/icons/cargo_item.svg",
              "name": Object {
                "modes_of_transport": Array [],
              },
              "options": Object {
                "contained": true,
              },
            },
            Object {
              "code": "container",
              "handleClick": [Function],
              "img": "https://assets.itsmycargo.com/assets/icons/container.svg",
              "name": Object {
                "modes_of_transport": Array [],
              },
              "options": Object {
                "contained": true,
              },
            },
          ]
        }
        selectedType=""
        theme={
          Object {
            "colors": Object {
              "primary": "#333",
              "secondary": "#fafafa",
            },
          }
        }
      />
    </div>
    <div
      className="next_step_sec flex-100 layout-row layout-align-center section inactive"
    >
      <div
        className="mot_sec flex-80 layout-row layout-wrap layout-align-center"
        style={
          Object {
            "color": "#333",
          }
        }
      >
        <div
          className="next_step_btn_sec flex-100 layout-row layout-align-end"
        >
          <div
            className="flex-none layout-column layout-align-center-center"
          >
            <div
              className="flex-none layout-row layout-align-center-start"
            >
              <p
                className="mot_note"
              >
                Availabilities will be shown for all applicable modes of transport for your shipment
              </p>
              <RoundButton
                active={false}
                back={false}
                classNames=""
                disabled={false}
                handleDisabled={null}
                handleNext={null}
                icon=""
                iconClass="fa-chevron-right"
                inverse={false}
                size="small"
                text="Next Step"
                theme={
                  Object {
                    "colors": Object {
                      "primary": "#333",
                      "secondary": "#fafafa",
                    },
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`state.direction && state.loadType 1`] = `
<div
  className="card_link_row layout-row flex-100 layout-align-center"
>
  <div
    className="flex-none content_width layout-row layout-align-start-center layout-wrap"
  >
    <div
      className="flex-100 layout-row layout-align-space-around-center layout-wrap"
    >
      <div
        className="flex-100 layout-row layout-align-start-center"
      >
        <TextHeading
          color=""
          size={4}
          text="Are you importing or exporting?"
          theme={
            Object {
              "colors": Object {
                "primary": "#333",
                "secondary": "#fafafa",
              },
            }
          }
        />
      </div>
      <div
        className="direction_card selected flex-none layout-row layout-align-center-center"
        onClick={[Function]}
      >
        <div
          className="flex-80 layout-row layout-align-space-between-center"
        >
          <p
            className="flex-none"
          >
             
            I am {{commercialAction}} ({{direction}})
          </p>
          <i
            className="flex-none fa fa-check clip"
            style="#333"
          />
        </div>
      </div>
      <div
        className="direction_card unselected flex-none layout-row layout-align-center-center"
        onClick={[Function]}
      >
        <div
          className="flex-80 layout-row layout-align-space-between-center"
        >
          <p
            className="flex-none"
          >
             
            I am {{commercialAction}} ({{direction}})
          </p>
        </div>
      </div>
    </div>
    <div
      className="flex-100 layout-row layout-wrap section "
    >
      <div
        className="flex-100 layout-row layout-align-start-center"
      >
        <TextHeading
          color=""
          size={4}
          text="Are you shipping cargo items or containers?"
          theme={
            Object {
              "colors": Object {
                "primary": "#333",
                "secondary": "#fafafa",
              },
            }
          }
        />
      </div>
      <CardLinkRow
        allowedCargoTypes={
          Object {
            "cargo_item": false,
            "container": false,
          }
        }
        cards={
          Array [
            Object {
              "code": "cargo_item",
              "handleClick": [Function],
              "img": "https://assets.itsmycargo.com/assets/icons/cargo_item.svg",
              "name": Object {
                "modes_of_transport": Array [],
              },
              "options": Object {
                "contained": true,
              },
            },
            Object {
              "code": "container",
              "handleClick": [Function],
              "img": "https://assets.itsmycargo.com/assets/icons/container.svg",
              "name": Object {
                "modes_of_transport": Array [],
              },
              "options": Object {
                "contained": true,
              },
            },
          ]
        }
        selectedType="FOO_LOAD_TYPE"
        theme={
          Object {
            "colors": Object {
              "primary": "#333",
              "secondary": "#fafafa",
            },
          }
        }
      />
    </div>
    <div
      className="next_step_sec flex-100 layout-row layout-align-center section "
    >
      <div
        className="mot_sec flex-80 layout-row layout-wrap layout-align-center"
        style={
          Object {
            "color": "#333",
          }
        }
      >
        <div
          className="next_step_btn_sec flex-100 layout-row layout-align-end"
        >
          <div
            className="flex-none layout-column layout-align-center-center"
          >
            <div
              className="flex-none layout-row layout-align-center-start"
            >
              <p
                className="mot_note"
              >
                Availabilities will be shown for all applicable modes of transport for your shipment
              </p>
              <RoundButton
                active={true}
                back={false}
                classNames=""
                disabled={false}
                handleDisabled={null}
                handleNext={[Function]}
                icon=""
                iconClass="fa-chevron-right"
                inverse={false}
                size="small"
                text="Next Step"
                theme={
                  Object {
                    "colors": Object {
                      "primary": "#333",
                      "secondary": "#fafafa",
                    },
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`state.direction === export 1`] = `
<div
  className="card_link_row layout-row flex-100 layout-align-center"
>
  <div
    className="flex-none content_width layout-row layout-align-start-center layout-wrap"
  >
    <div
      className="flex-100 layout-row layout-align-space-around-center layout-wrap"
    >
      <div
        className="flex-100 layout-row layout-align-start-center"
      >
        <TextHeading
          color=""
          size={4}
          text="Are you importing or exporting?"
          theme={
            Object {
              "colors": Object {
                "primary": "#333",
                "secondary": "#fafafa",
              },
            }
          }
        />
      </div>
      <div
        className="direction_card selected flex-none layout-row layout-align-center-center"
        onClick={[Function]}
      >
        <div
          className="flex-80 layout-row layout-align-space-between-center"
        >
          <p
            className="flex-none"
          >
             
            I am {{commercialAction}} ({{direction}})
          </p>
          <i
            className="flex-none fa fa-check clip"
            style="#333"
          />
        </div>
      </div>
      <div
        className="direction_card unselected flex-none layout-row layout-align-center-center"
        onClick={[Function]}
      >
        <div
          className="flex-80 layout-row layout-align-space-between-center"
        >
          <p
            className="flex-none"
          >
             
            I am {{commercialAction}} ({{direction}})
          </p>
        </div>
      </div>
    </div>
    <div
      className="flex-100 layout-row layout-wrap section "
    >
      <div
        className="flex-100 layout-row layout-align-start-center"
      >
        <TextHeading
          color=""
          size={4}
          text="Are you shipping cargo items or containers?"
          theme={
            Object {
              "colors": Object {
                "primary": "#333",
                "secondary": "#fafafa",
              },
            }
          }
        />
      </div>
      <CardLinkRow
        allowedCargoTypes={
          Object {
            "cargo_item": false,
            "container": false,
          }
        }
        cards={
          Array [
            Object {
              "code": "cargo_item",
              "handleClick": [Function],
              "img": "https://assets.itsmycargo.com/assets/icons/cargo_item.svg",
              "name": Object {
                "modes_of_transport": Array [],
              },
              "options": Object {
                "contained": true,
              },
            },
            Object {
              "code": "container",
              "handleClick": [Function],
              "img": "https://assets.itsmycargo.com/assets/icons/container.svg",
              "name": Object {
                "modes_of_transport": Array [],
              },
              "options": Object {
                "contained": true,
              },
            },
          ]
        }
        selectedType=""
        theme={
          Object {
            "colors": Object {
              "primary": "#333",
              "secondary": "#fafafa",
            },
          }
        }
      />
    </div>
    <div
      className="next_step_sec flex-100 layout-row layout-align-center section inactive"
    >
      <div
        className="mot_sec flex-80 layout-row layout-wrap layout-align-center"
        style={
          Object {
            "color": "#333",
          }
        }
      >
        <div
          className="next_step_btn_sec flex-100 layout-row layout-align-end"
        >
          <div
            className="flex-none layout-column layout-align-center-center"
          >
            <div
              className="flex-none layout-row layout-align-center-start"
            >
              <p
                className="mot_note"
              >
                Availabilities will be shown for all applicable modes of transport for your shipment
              </p>
              <RoundButton
                active={false}
                back={false}
                classNames=""
                disabled={false}
                handleDisabled={null}
                handleNext={null}
                icon=""
                iconClass="fa-chevron-right"
                inverse={false}
                size="small"
                text="Next Step"
                theme={
                  Object {
                    "colors": Object {
                      "primary": "#333",
                      "secondary": "#fafafa",
                    },
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`theme is falsy 1`] = `
<div
  className="card_link_row layout-row flex-100 layout-align-center"
>
  <div
    className="flex-none content_width layout-row layout-align-start-center layout-wrap"
  >
    <div
      className="flex-100 layout-row layout-align-space-around-center layout-wrap"
    >
      <div
        className="flex-100 layout-row layout-align-start-center"
      >
        <TextHeading
          color=""
          size={4}
          text="Are you importing or exporting?"
          theme={null}
        />
      </div>
      <div
        className="direction_card unselected flex-none layout-row layout-align-center-center"
        onClick={[Function]}
      >
        <div
          className="flex-80 layout-row layout-align-space-between-center"
        >
          <p
            className="flex-none"
          >
             
            I am {{commercialAction}} ({{direction}})
          </p>
        </div>
      </div>
      <div
        className="direction_card unselected flex-none layout-row layout-align-center-center"
        onClick={[Function]}
      >
        <div
          className="flex-80 layout-row layout-align-space-between-center"
        >
          <p
            className="flex-none"
          >
             
            I am {{commercialAction}} ({{direction}})
          </p>
        </div>
      </div>
    </div>
    <div
      className="flex-100 layout-row layout-wrap section inactive"
    >
      <div
        className="flex-100 layout-row layout-align-start-center"
      >
        <TextHeading
          color=""
          size={4}
          text="Are you shipping cargo items or containers?"
          theme={null}
        />
      </div>
      <CardLinkRow
        allowedCargoTypes={
          Object {
            "cargo_item": false,
            "container": false,
          }
        }
        cards={
          Array [
            Object {
              "code": "cargo_item",
              "handleClick": [Function],
              "img": "https://assets.itsmycargo.com/assets/icons/cargo_item.svg",
              "name": Object {
                "modes_of_transport": Array [],
              },
              "options": Object {
                "contained": true,
              },
            },
            Object {
              "code": "container",
              "handleClick": [Function],
              "img": "https://assets.itsmycargo.com/assets/icons/container.svg",
              "name": Object {
                "modes_of_transport": Array [],
              },
              "options": Object {
                "contained": true,
              },
            },
          ]
        }
        selectedType=""
        theme={null}
      />
    </div>
    <div
      className="next_step_sec flex-100 layout-row layout-align-center section inactive"
    >
      <div
        className="mot_sec flex-80 layout-row layout-wrap layout-align-center"
        style={
          Object {
            "color": "null",
          }
        }
      >
        <div
          className="next_step_btn_sec flex-100 layout-row layout-align-end"
        >
          <div
            className="flex-none layout-column layout-align-center-center"
          >
            <div
              className="flex-none layout-row layout-align-center-start"
            >
              <p
                className="mot_note"
              >
                Availabilities will be shown for all applicable modes of transport for your shipment
              </p>
              <RoundButton
                active={false}
                back={false}
                classNames=""
                disabled={false}
                handleDisabled={null}
                handleNext={null}
                icon=""
                iconClass="fa-chevron-right"
                inverse={false}
                size="small"
                text="Next Step"
                theme={null}
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
